--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-id-generator": "^3.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "vin-validator": "^1.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
